기존에 레코드 입력할때 LinkedHashMap을써서 각 컬럼의 입력값이 똑같다면 1개만 입력되는 현상을 List<Pair<>>로 변경하여 해결함